--- a/Assignment_PartB_Producer1.ipynb
+++ b/Assignment_PartB_Producer1.ipynb
@@ -92,7 +92,7 @@
     "# Now create the data base\n",
     "client = MongoClient() # so we connect on the default host and port\n",
     "db = client.fit3182_assignment_db # create a new database fit3182_assignment_db\n",
-    "a_collection = db.climatee # create a new collection called 'the_collection'\n",
+    "a_collection = db.climatee # create a new collection called 'a_collection'\n",
     "with open('climate_historic.csv', 'r') as file_one:  # open climate historic file\n",
     "    # now create a csv object for each of the files\n",
     "    climate_data = csv.reader(file_one)\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,31 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Publishing records..\n",
-      "Message published successfully. Data:  ['-37.858', '143.428', '14', '49.5', '6', '12', ' 0.00G', '121', '2019/01/01', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.779', '146.108', '15', '51', '9.6', '15.9', ' 0.16G', '128', '2019/01/02', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.346', '143.631', '17', '47.2', '4.9', '13', ' 0.00I', '149', '2019/01/03', 'Producer1']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-0e25e7f36333>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the data from the stream now\n",
     "\n",
@@ -242,8 +220,8 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'Producer1'\n",
-    "    \n",
+    "    topic = 'same_topic'\n",
+    "    prod = 'Producer1'\n",
     "    print('Publishing records..')\n",
     "    producer = connect_kafka_producer()\n",
     "    length_lines = len(cstream_lines)\n",
@@ -252,9 +230,7 @@
     "        index_of_line = random.randrange(0, length_lines)\n",
     "        new_date = new_date + timedelta(days = 1)\n",
     "        str_date = new_date.strftime('%Y/%m/%d')\n",
-    "        line_sent = cstream_lines[index_of_line]\n",
-    "        line_sent.append(str_date)\n",
-    "        line_sent.append(topic)\n",
+    "        line_sent = cstream_lines[index_of_line] + [str_date] + [prod]\n",
     "        data = str(line_sent)\n",
     "        publish_message(producer, topic, 'parsed', data)\n",
     "        sleep(10)"
