--- a/Assignment_PartB_Producer2.ipynb
+++ b/Assignment_PartB_Producer2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "# Now create the data base\n",
     "client = MongoClient() # so we connect on the default host and port\n",
     "db = client.fit3182_assignment_db # create a new database fit3182_assignment_db\n",
-    "a_collection = db.climatee # create a new collection called 'the_collection'\n",
+    "a_collection = db.climatee # create a new collection called 'a_collection'\n",
     "with open('climate_historic.csv', 'r') as file_one:  # open climate historic file\n",
     "    # now create a csv object for each of the files\n",
     "    climate_data = csv.reader(file_one)\n",
@@ -143,40 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Publishing records..\n",
-      "Message published successfully. Data:  ['-36.6564', '142.8615', '91', '69', '2018/12/31', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.4523', '147.0175', '90', '66', '2018/12/31', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.817', '142.3724', '79', '53', '2018/12/31', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.738', '142.1177', '95', '77', '2018/12/31', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.6529', '143.9035', '100', '112', '2018/12/31', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.5438', '144.7548', '99', '84', '2019/01/01', 'Producer2']\n",
-      "Message published successfully. Data:  ['-38.495', '146.944', '56', '53', '2019/01/01', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.0694', '141.5717', '72', '54', '2019/01/01', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.38', '148.053', '80', '46', '2019/01/01', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.8377', '143.4624', '64', '42', '2019/01/01', 'Producer2']\n",
-      "Message published successfully. Data:  ['-37.5316', '143.1498', '77', '51', '2019/01/02', 'Producer2']\n",
-      "Message published successfully. Data:  ['-36.8079', '145.1409', '63', '42', '2019/01/02', 'Producer2']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-4e5bb22beb46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m             \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m             \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0mindex_of_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength_lines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "import pymongo\n",
@@ -224,8 +193,8 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'Producer2'\n",
-    "    \n",
+    "    topic = 'same_topic'\n",
+    "    prod = 'Producer2'\n",
     "    print('Publishing records..')\n",
     "    producer = connect_kafka_producer()\n",
     "    length_lines = len(aqua_lines)\n",
@@ -235,7 +204,7 @@
     "            index_of_line = random.randrange(0, length_lines)\n",
     "            new_date = new_date\n",
     "            str_date = new_date.strftime('%Y/%m/%d')\n",
-    "            line_sent = aqua_lines[index_of_line] + [str_date] + [topic]\n",
+    "            line_sent = aqua_lines[index_of_line] + [str_date] + [prod]\n",
     "            data = str(line_sent)\n",
     "            publish_message(producer, topic, 'parsed', data)\n",
     "            sleep(2)\n",
@@ -243,7 +212,7 @@
     "            index_of_line = random.randrange(0, length_lines)\n",
     "            new_date = new_date + timedelta(days = 1)\n",
     "            str_date = new_date.strftime('%Y/%m/%d')\n",
-    "            line_sent = aqua_lines[index_of_line] + [str_date] + [topic]\n",
+    "            line_sent = aqua_lines[index_of_line] + [str_date] + [prod]\n",
     "            data = str(line_sent)\n",
     "            publish_message(producer, topic, 'parsed', data)\n",
     "            start_time = time.time()\n",
