--- a/Assignment_PartB_Producer3.ipynb
+++ b/Assignment_PartB_Producer3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "# Now create the data base\n",
     "client = MongoClient() # so we connect on the default host and port\n",
     "db = client.fit3182_assignment_db # create a new database fit3182_assignment_db\n",
-    "a_collection = db.climatee # create a new collection called 'the_collection'\n",
+    "a_collection = db.climatee # create a new collection called 'a_collection'\n",
     "with open('climate_historic.csv', 'r') as file_one:  # open climate historic file\n",
     "    # now create a csv object for each of the files\n",
     "    climate_data = csv.reader(file_one)\n",
@@ -143,63 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Publishing records..\n",
-      "Message published successfully. Data:  ['-36.4944', '141.8992', '58', '40', '2019/01/16', 'Producer3']\n",
-      "Message published successfully. Data:  ['-34.2708', '141.6158', '79', '52', '2019/01/16', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.273', '146.155', '77', '36', '2019/01/16', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.4047', '143.6615', '69', '45', '2019/01/16', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.388', '141.8309', '93', '73', '2019/01/16', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.943', '143.286', '51', '29', '2019/01/17', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6664', '144.7828', '82', '55', '2019/01/17', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.327', '148.083', '100', '47', '2019/01/17', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4149', '141.0156', '85', '60', '2019/01/17', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.9034', '141.0013', '100', '95', '2019/01/17', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.99', '142.9147', '76', '49', '2019/01/18', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.5812', '142.7374', '94', '75', '2019/01/18', 'Producer3']\n",
-      "Message published successfully. Data:  ['-34.3914', '141.726', '78', '51', '2019/01/18', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.934', '142.5759', '64', '47', '2019/01/18', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.7236', '142.947', '94', '73', '2019/01/18', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.963', '141.078', '86', '60', '2019/01/19', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.9285', '143.9622', '66', '43', '2019/01/19', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.0691', '141.4546', '80', '56', '2019/01/19', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.6828', '144.784', '90', '66', '2019/01/19', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.0663', '145.6855', '87', '62', '2019/01/19', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.8475', '147.2512', '76', '50', '2019/01/20', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.3863', '142.8822', '85', '59', '2019/01/20', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.282', '146.157', '100', '71', '2019/01/20', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.2726', '145.506', '77', '50', '2019/01/20', 'Producer3']\n",
-      "Message published successfully. Data:  ['-38.0326', '141.5413', '83', '56', '2019/01/20', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.779', '146.108', '61', '32', '2019/01/21', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.9887', '142.6515', '82', '55', '2019/01/21', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4384', '141.7444', '81', '55', '2019/01/21', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.7199', '141.3946', '82', '55', '2019/01/21', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4133', '141.0286', '52', '47', '2019/01/21', 'Producer3']\n",
-      "Message published successfully. Data:  ['-37.3226', '143.5442', '78', '51', '2019/01/22', 'Producer3']\n",
-      "Message published successfully. Data:  ['-35.708', '143.7987', '50', '38', '2019/01/22', 'Producer3']\n",
-      "Message published successfully. Data:  ['-36.4936', '143.9868', '72', '46', '2019/01/22', 'Producer3']\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-8f3d097372c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0mindex_of_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength_lines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('hotspot_TERRA_streaming.csv', 'r') as file_four: # open hotspot historic file\n",
     "    terra_data = csv.reader(file_four)\n",
@@ -235,7 +183,8 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'Producer3'\n",
+    "    topic = 'same_topic'\n",
+    "    prod = 'Producer3'\n",
     "    \n",
     "    print('Publishing records..')\n",
     "    producer = connect_kafka_producer()\n",
@@ -246,7 +195,7 @@
     "            index_of_line = random.randrange(0, length_lines)\n",
     "            new_date = new_date\n",
     "            str_date = new_date.strftime('%Y/%m/%d')\n",
-    "            line_sent = terra_lines[index_of_line] + [str_date] + [topic]\n",
+    "            line_sent = terra_lines[index_of_line] + [str_date] + [prod]\n",
     "            data = str(line_sent)\n",
     "            publish_message(producer, topic, 'parsed', data)\n",
     "            sleep(2)\n",
@@ -254,7 +203,7 @@
     "            index_of_line = random.randrange(0, length_lines)\n",
     "            new_date = new_date + timedelta(days = 1)\n",
     "            str_date = new_date.strftime('%Y/%m/%d')\n",
-    "            line_sent = terra_lines[index_of_line] + [str_date] + [topic]\n",
+    "            line_sent = terra_lines[index_of_line] + [str_date] + [prod]\n",
     "            data = str(line_sent)\n",
     "            publish_message(producer, topic, 'parsed', data)\n",
     "            start_time = time.time()\n",
