--- a/Assignment_PartB_Producer1.ipynb
+++ b/Assignment_PartB_Producer1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,68 +187,36 @@
      "output_type": "stream",
      "text": [
       "Publishing records..\n",
-      "Message published successfully. Data:  ['-36.0856', '144.233', '11', '43.2', '5.9', '14', ' 0.00I', '100', '2019/01/01', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.7052', '144.6926', '17', '52.7', '7.7', '14', ' 0.00G', '142', '2019/01/02', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.837', '142.0391', '19', '55.8', '6', '11.1', ' 0.00I', '155', '2019/01/03', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.189', '146.791', '21', '61.1', '6.6', '11.1', ' 0.00I', '163', '2019/01/04', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.406', '148.088', '12', '43.9', '12', '15.9', ' 0.08G', '108', '2019/01/05', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.1462', '145.2096', '10', '43.6', '9.7', '14', ' 0.20G', '90', '2019/01/06', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.596', '149.319', '19', '56.1', '6.9', '12', ' 0.00A', '155', '2019/01/07', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.425', '148.107', '15', '41.2', '13.8', '16.9', ' 0.00G', '138', '2019/01/08', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.358', '143.113', '21', '58.8', '8.8', '22.9', ' 0.08G', '167', '2019/01/09', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.8867', '142.1873', '14', '39.3', '17.7', '30.9', ' 0.01G', '131', '2019/01/10', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.575', '146.6668', '18', '53.6', '7.9', '15.9', ' 0.00G', '150', '2019/01/11', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.7052', '144.6926', '17', '52.7', '7.7', '14', ' 0.00G', '142', '2019/01/12', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.608', '149.292', '15', '44.6', '9.7', '12', ' 0.02G', '134', '2019/01/13', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.3583', '143.0203', '13', '43.3', '9.4', '14', ' 0.00G', '118', '2019/01/14', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.95', '142.366', '16', '53.6', '8.1', '15', ' 0.00G', '133', '2019/01/15', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.605', '149.326', '23', '49.6', '10', '19', ' 0.00I', '198', '2019/01/16', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.864', '144.174', '28', '58.4', '11.9', '18.1', ' 0.04G', '223', '2019/01/17', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.295', '144.377', '16', '54.8', '8.3', '9.9', ' 0.00G', '132', '2019/01/18', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.461', '148.103', '10', '45.9', '3.2', '7', ' 0.00G', '89', '2019/01/19', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.9194', '143.6131', '19', '50.3', '7.7', '11.1', ' 0.00I', '162', '2019/01/20', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.863', '144.17', '18', '57.5', '16.1', '21', ' 0.00G', '145', '2019/01/21', 'Producer1']\n",
-      "Message published successfully. Data:  ['-38.527', '143.493', '19', '51.5', '10.2', '20', ' 0.00I', '161', '2019/01/22', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.33', '148.087', '12', '41.8', '14.7', '21', ' 0.00I', '110', '2019/01/23', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.497', '147.266', '10', '41', '14.1', '20', ' 0.02G', '92', '2019/01/24', 'Producer1']\n",
-      "Message published successfully. Data:  ['-34.282', '142.121', '15', '49.1', '9.6', '16.9', ' 0.01G', '130', '2019/01/25', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.779', '146.108', '13', '42', '11.4', '16.9', ' 0.00G', '119', '2019/01/26', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.635', '149.303', '24', '53.4', '9.9', '15.9', ' 0.00I', '200', '2019/01/27', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.367', '148.04', '12', '47.6', '9.1', '13', ' 0.12G', '105', '2019/01/28', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.575', '146.6668', '18', '53.6', '7.9', '15.9', ' 0.00G', '150', '2019/01/29', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.0966', '142.3635', '22', '57', '8.5', '15', ' 0.00G', '178', '2019/01/30', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.397', '148.121', '13', '44', '13.6', '21', ' 0.04G', '117', '2019/01/31', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.4553', '142.8786', '19', '55.3', '6.2', '12', ' 0.00I', '156', '2019/02/01', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.7685', '142.7134', '14', '48.2', '12.5', '19', ' 0.03G', '122', '2019/02/02', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.3799', '143.7149', '12', '43.8', '6.7', '14', ' 0.16G', '108', '2019/02/03', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.6859', '146.8907', '16', '51.5', '8.7', '15', ' 0.02G', '135', '2019/02/04', 'Producer1']\n",
-      "Message published successfully. Data:  ['-38.167', '143.841', '21', '58.1', '5.3', '11.1', ' 0.00G', '168', '2019/02/05', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.1', '143.767', '20', '53.5', '7.2', '15.9', ' 0.31G', '166', '2019/02/06', 'Producer1']\n",
-      "Message published successfully. Data:  ['-35.889', '145.614', '14', '49.2', '10.5', '20', ' 0.12G', '121', '2019/02/07', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.6662', '142.9874', '24', '51.9', '7.3', '13', ' 0.00I', '202', '2019/02/08', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.062', '141.373', '26', '52.2', '13.7', '16.9', ' 0.00I', '219', '2019/02/09', 'Producer1']\n",
-      "Message published successfully. Data:  ['-35.889', '145.614', '14', '49.2', '10.5', '20', ' 0.12G', '121', '2019/02/10', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.627', '149.261', '26', '53.7', '8.7', '15', ' 0.00I', '216', '2019/02/11', 'Producer1']\n",
-      "Message published successfully. Data:  ['-38.038', '142.986', '15', '50.7', '9.2', '13', ' 0.02G', '128', '2019/02/12', 'Producer1']\n",
-      "Message published successfully. Data:  ['-35.961', '141.089', '5', '34.9', '4.3', '11.1', ' 0.00A', '48', '2019/02/13', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.368', '148.05', '10', '41.4', '9.4', '14', ' 0.00I', '92', '2019/02/14', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.227', '141.151', '9', '41.2', '10', '13', ' 0.02G', '83', '2019/02/15', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.38', '148.053', '14', '51', '9.9', '15', ' 0.00I', '119', '2019/02/16', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.437', '148.104', '12', '40.7', '16.7', '21', ' 0.12G', '111', '2019/02/17', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.1858', '143.885', '20', '58.4', '4.7', '11.1', ' 0.01G', '159', '2019/02/18', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.406', '148.088', '12', '43.9', '12', '15.9', ' 0.08G', '108', '2019/02/19', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.477', '148.097', '8', '42.6', '2', '6', ' 0.00I', '73', '2019/02/20', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.213', '142.941', '23', '61.9', '8', '15.9', ' 0.00I', '178', '2019/02/21', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.0669', '141.0556', '12', '47.5', '15', '18.1', ' 0.20G', '105', '2019/02/22', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.1', '143.767', '20', '53.5', '7.2', '15.9', ' 0.31G', '166', '2019/02/23', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.945', '144.354', '24', '55.6', '5.9', '13', ' 0.00I', '196', '2019/02/24', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.1815', '146.7777', '17', '50.4', '10.8', '16.9', ' 0.00I', '145', '2019/02/25', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.633', '149.264', '16', '50.9', '12.9', '21', ' 0.03G', '136', '2019/02/26', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.57', '148.034', '11', '40.4', '19.3', '26', ' 0.00G', '102', '2019/02/27', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.461', '148.103', '10', '45.9', '3.2', '7', ' 0.00G', '89', '2019/02/28', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.461', '148.109', '14', '50.7', '8.6', '13', ' 0.12G', '119', '2019/03/01', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.608', '149.282', '22', '62.7', '7.6', '18.1', ' 0.00I', '169', '2019/03/02', 'Producer1']\n",
-      "Message published successfully. Data:  ['-37.295', '144.377', '16', '54.8', '8.3', '9.9', ' 0.00G', '132', '2019/03/03', 'Producer1']\n"
+      "Message published successfully. Data:  ['-37.856', '143.416', '15', '53.7', '6.8', '11.1', ' 0.51G', '125', '2019/01/02', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.606', '149.312', '16', '51', '6', '13', ' 0.00G', '136', '2019/01/03', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.1', '143.767', '20', '53.5', '7.2', '15.9', ' 0.31G', '166', '2019/01/04', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.7801', '142.7151', '16', '51.7', '7.4', '15', ' 0.00I', '135', '2019/01/05', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.33', '148.087', '12', '41.8', '14.7', '21', ' 0.00I', '110', '2019/01/06', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.6833', '141.6347', '15', '56.2', '16.9', '20', ' 1.77G', '122', '2019/01/07', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.444', '148.101', '9', '42', '4.6', '12', ' 0.00I', '82', '2019/01/08', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.404', '142.5467', '25', '60.9', '6.3', '8.9', ' 0.00I', '195', '2019/01/09', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.591', '149.33', '16', '46.7', '10', '16.9', ' 0.00I', '141', '2019/01/10', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.45', '148.097', '9', '41', '8.2', '9.9', ' 0.00G', '83', '2019/01/11', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.608', '149.292', '15', '44.6', '9.7', '12', ' 0.02G', '134', '2019/01/12', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.57', '148.034', '11', '40.4', '19.3', '26', ' 0.00G', '102', '2019/01/13', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.091', '145.362', '12', '48.8', '4.2', '7', ' 0.00I', '104', '2019/01/14', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.94', '143.281', '21', '52.8', '4.1', '11.1', ' 0.00I', '176', '2019/01/15', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.3774', '143.7079', '11', '43.2', '8.1', '14', ' 0.20G', '100', '2019/01/16', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.7685', '142.7134', '14', '48.2', '12.5', '19', ' 0.03G', '122', '2019/01/17', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-37.719', '142.154', '13', '47', '7.9', '15', ' 0.02G', '114', '2019/01/18', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-38.141', '143.183', '23', '54.1', '5.7', '14', ' 0.00I', '190', '2019/01/19', '00:00:00', 'Producer1']\n",
+      "Message published successfully. Data:  ['-36.0313', '143.6296', '14', '47.4', '10.6', '19', ' 0.03G', '123', '2019/01/20', '00:00:00', 'Producer1']\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-560300dacca5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -300,7 +268,7 @@
     "        index_of_line = random.randrange(0, length_lines)\n",
     "        new_date = new_date + timedelta(days = 1)\n",
     "        str_date = new_date.strftime('%Y/%m/%d')\n",
-    "        line_sent = cstream_lines[index_of_line] + [str_date] + [prod]\n",
+    "        line_sent = cstream_lines[index_of_line] + [str_date] + ['00:00:00'] + [prod]\n",
     "        data = str(line_sent)\n",
     "        publish_message(producer, topic, 'parsed', data)\n",
     "        sleep(10)"
